--- a/src/App.css
+++ b/src/App.css
@@ -98,6 +98,7 @@
 
 .formField {
   margin-bottom: 40px;
+  text-align: center;
   align-items: center;
   justify-content: center;
 }
@@ -132,6 +133,21 @@
   outline: none;
   border-radius: 25px;
   padding: 15px 70px;
+  margin-bottom: 2vh;
+  margin-left: 2vh;
+  font-size: 0.8em;
+  font-weight: 500;
+}
+.formFieldButtonDirected {
+  background-color: #4FBDBA;
+  color: white;
+  text-decoration: none;
+  border: none;
+  outline: none;
+  border-radius: 25px;
+  padding: 15px 70px;
+  margin-bottom: 2vh;
+  margin-left: 2vh;
   font-size: 0.8em;
   font-weight: 500;
 }
@@ -140,7 +156,7 @@
 }
 
 .formFieldLink {
-  color: #66707d;
+  color: white;
   text-decoration: none;
   display: inline-block;
   border-bottom: 1.5px solid #35858B;
