routing for forgot and new password

--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
 
 .appAside {
   width: 45%;
-  background-color: #35858B;
+  background-color: #35858b;
   /*background-image: url("gg.gif");
   background-repeat: no-repeat;
   background-position: center;*/
@@ -22,7 +22,6 @@
   align-items: center;
 }
 
-
 .appForm {
   width: 55%;
   background-image: url(./pages/assets/images/blue.jpeg);
@@ -30,9 +29,9 @@
   padding: 25px 40px;
   overflow: auto;
   text-align: center;
-  -webkit-box-shadow:0 0 20px #6FDDDA; 
-  -moz-box-shadow: 0 0 20px #6FDDDA; 
-  box-shadow:0 0 20px #6FDDDA;
+  -webkit-box-shadow: 0 0 20px #6fddda;
+  -moz-box-shadow: 0 0 20px #6fddda;
+  box-shadow: 0 0 20px #6fddda;
 }
 
 .pageSwitcher {
@@ -52,10 +51,10 @@
   text-decoration: none;
 }
 .pageSwitcherItem:hover {
-  box-shadow: 0 12px 16px 0 #4FBDBA3d, 0 17px 50px 0 #4FBDBA30;
+  box-shadow: 0 12px 16px 0 #4fbdba3d, 0 17px 50px 0 #4fbdba30;
 }
 .pageSwitcherItem-active {
-  background-color: #4FBDBA;
+  background-color: #4fbdba;
   color: white;
 }
 
@@ -93,7 +92,7 @@
 
 .formTitleLink-active {
   color: white;
-  border-bottom: 1px solid #35858B;
+  border-bottom: 1px solid #35858b;
 }
 
 .formField {
@@ -127,7 +126,7 @@
 }
 
 .formFieldButton {
-  background-color: #4FBDBA;
+  background-color: #4fbdba;
   color: white;
   border: none;
   outline: none;
@@ -139,7 +138,7 @@
   font-weight: 500;
 }
 .formFieldButtonDirected {
-  background-color: #4FBDBA;
+  background-color: #4fbdba;
   color: white;
   text-decoration: none;
   border: none;
@@ -152,21 +151,20 @@
   font-weight: 500;
 }
 .formFieldButton:hover {
-  box-shadow: 0 12px 16px 0 #4FBDBA3d, 0 17px 50px 0 #4FBDBA30;
+  box-shadow: 0 12px 16px 0 #4fbdba3d, 0 17px 50px 0 #4fbdba30;
 }
 
 .formFieldLink {
   color: white;
   text-decoration: none;
   display: inline-block;
-  border-bottom: 1.5px solid #35858B;
+  border-bottom: 1.5px solid #35858b;
   padding-bottom: 5px;
 }
 
-
 .formFieldTermsLink {
   color: white;
-  border-bottom: 1px solid #35858B;
+  border-bottom: 1px solid #35858b;
   text-decoration: none;
   display: inline-block;
   padding-bottom: 2px;
@@ -175,28 +173,31 @@
 
 .drop {
   width: 60%;
-  color: #35858B;
+  color: #35858b;
   padding-top: 1vh;
   justify-content: center;
   display: block;
-  margin: 0 auto; 
+  margin: 0 auto;
 }
 
-.typed-out{
+.typed-out {
   font-size: 10vh;
   color: papayawhip;
   overflow: hidden;
-  border-right: .15em solid orange;
+  border-right: 0.15em solid orange;
   white-space: nowrap;
   font-size: 1.6rem;
   width: 0;
-  animation: typing 10s steps(20, end) forwards,
-  blink .8s infinite;
+  animation: typing 10s steps(20, end) forwards, blink 0.8s infinite;
 }
 
 @keyframes typing {
-  from { width: 0 }
-  to { width: 100% }
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 .glow {
   font-size: 80px;
@@ -209,16 +210,18 @@
 
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--grey), 0 0 40px var(--grey);
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--grey),
+      0 0 40px var(--grey);
   }
   to {
-    text-shadow: 0 0 20px #fff, 0 0 30px var(--grey2), 0 0 40px var(--grey2), 0 0 50px var(--grey2);
+    text-shadow: 0 0 20px #fff, 0 0 30px var(--grey2), 0 0 40px var(--grey2),
+      0 0 50px var(--grey2);
   }
 }
 
 .typing-demo {
   width: 100%;
-  animation: typing  1.8s steps(8), blink 0.5s step-end infinite;
+  animation: typing 1.8s steps(8), blink 0.5s step-end infinite;
   white-space: nowrap;
   overflow: hidden;
   border-right: 3px solid;
@@ -254,14 +257,13 @@
   width: 0.5vw;
 }
 
- 
 /* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #4FBDBA; 
+  background: #4fbdba;
   border-radius: 0.5vw;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #6FDDDA; 
+  background: #6fddda;
 }
