--- a/src/logstyle.module.css
+++ b/src/logstyle.module.css
@@ -1,6 +1,6 @@
 :root {
-  --grey: #bbbbbb;
-  --grey2: #dddddd;
+  --from: rgb(175, 46, 192);
+  --to: rgb(133, 34, 146);
 }
 .App {
   height: 100vh;
@@ -11,10 +11,8 @@
 .appAside {
   width: 45%;
   background-color: #35858b;
-  /*background-image: url("gg.gif");
-  background-repeat: no-repeat;
-  background-position: center;*/
-  background-image: url("./pages/assets/images/img2.jfif");
+  background-image: url("./pages/assets/images/img4.jfif");
+  /*background-image: linear-gradient(black,rgb(58, 7, 58),black);*/
   background-repeat: no-repeat;
   background-position: center;
   display: flex;
@@ -24,8 +22,8 @@
 
 .appForm {
   width: 55%;
-  background-image: url(./pages/assets/images/blue.jpeg);
-  background-color: #12130f;
+  /*background-image: url(./pages/assets/images/blue.jpeg);*/
+  background: linear-gradient(to top right, #000000 2%, #660033 100%);
   padding: 25px 40px;
   overflow: auto;
   text-align: center;
@@ -201,7 +199,7 @@
 }
 .glow {
   font-size: 80px;
-  color: #fff;
+  color: rgb(255, 255, 255);
   text-align: center;
   -webkit-animation: glow 2s ease-in-out infinite alternate;
   -moz-animation: glow 2s ease-in-out infinite alternate;
@@ -210,12 +208,12 @@
 
 @-webkit-keyframes glow {
   from {
-    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--grey),
-      0 0 40px var(--grey);
+    text-shadow: 0 0 10px var(--from), 0 0 20px var(--from), 0 0 30px var(--from),
+      0 0 40px var(--from);
   }
   to {
-    text-shadow: 0 0 20px #fff, 0 0 30px var(--grey2), 0 0 40px var(--grey2),
-      0 0 50px var(--grey2);
+    text-shadow: 0 0 20px var(--to), 0 0 30px var(--to), 0 0 40px var(--to),
+      0 0 50px var(--to);
   }
 }
 
